fix(bs-templates): spacing between tag groups on event page

--- a/public/bs-templates/templates/event/_style.scss
+++ b/public/bs-templates/templates/event/_style.scss
@@ -88,15 +88,11 @@
   }
 
   .tag-groups {
-
     padding: 0 0 10px 20px;
 
     .tags {
-
-      padding: 0;
-
+      padding: 0 0 1em;
     }
-
   }
 
 
